@@ -1,3 +1,8 @@
+2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/disk/cryptodisk.c (grub_cryptodisk_endecrypt): Rename
+	argument from encrypt to do_encrypt to avoid shadowing.
+
 2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/loader/multiboot_elfxx.c (grub_multiboot_load_elf): Fix
